   Envir in order to force the linker to include the Tkenv library into the
   executable. (These functions do absolutely nothing.)
Apr 10, 2000
 - TRUE/FALSE (defines) replaced by true/false (C++ keywords)
 - in printf() statements, all "%lf","%lg","%le" was replaced by "%f","%g","%e"
   (eliminated a lot of gcc -Wall warnings)
Apr 13, 2000
 - code for Express Run (runSimulationNoTracing()) modified so that it prints
   module output (ev<<...) for the finish() functions [suggested by Niko]
May 5, 2000
 - implemented module parameter substitution in display strings (like
   "p=$x_pos,$y_pos"). Substitution still not supported in connection display
   strings.
 - setDisplayString() now takes effect during simulation execution. Tkenv also
   handles the new 'immediate' argument to setDisplayString().
   Annoyance: setDisplayString() also does a 'Rearrange randomly placed
   submodules'. This is not so trivial to change (module positions will need
   to be explicitly stored)...
May 7, 2000
 - Makefile.vc improvements [from Balazs Kelemen]
 - tk_PatchLevel check corrected (complained about Tk 8.0.5) [reported by
   Ulrich Kaage]
May 10, 2000
 - [Tkenv]/extra-stack= option added, it specifies (in bytes) how much extra
   stack each activity() module needs when executing under Tkenv. This used to
   be hardcoded (16384), now users can fine-tune it. [suggested by Niko]
May 21, 2000
 - bugfix: 'Options|Load inspector list' now works again (you must re-generate
   your existing inspect.lst files)
------ omnetpp-2.0b4 released ------
Jun 2, 2000
 - minor fix in tkcmd.cc [reported by Richard Lyon]
------ omnetpp-2.0b5 released ------
July 17, 2000
 - fixed bug in splitInspectorName()  [reported by Ulrich Kaage]
July 26, 2000
 - fixed a bug which caused Tcl error when using ev<< or ev.printf() with
   a string than contained curly braces [reported by Nick van Foreest]
 - added Edit|Find... to main menu.
Aug 7, 2000
 - makefile changes for RPM support
